// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message return complete 1`] = `
[MockFunction] {
  "calls": [
    [
      "

🚀 mock message
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return exit 1`] = `
[MockFunction] {
  "calls": [
    [
      "

💩 mock message
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return failure 1`] = `
[MockFunction] {
  "calls": [
    [
      "
🔴 [31mfailure [0m",
      "[31mmock message[0m",
      undefined,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return success 1`] = `
[MockFunction] {
  "calls": [
    [
      "
🟢 [32msuccess [0m",
      "[32mmock message[0m",
      undefined,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`message return warning 1`] = `
[MockFunction] {
  "calls": [
    [
      "
🟡 [33mwarning [0m",
      "[33mmock message[0m",
      undefined,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
